--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         run: npm run test:unit
       - name: build storybook
         run: npm run storybook:build
-      - name: screenshoot testing
-        run: npm run test:ui:ci
+      # - name: screenshoot testing
+      #   run: npm run test:ui:ci
